# csc_122_streams

./: .gitignore  10_streams_as_arguments.cpp  1_read_from_console.cpp  2_read_from_file.cpp  3_write_to_file.cpp  4_argc_and_argv.cpp  4_tsv_to_csv.cpp  5_piping_sink.cpp  6_client.cpp  7_client.cpp  7_server.cpp  7_string_stream.cpp  8_string_stream.cpp  9_file_streams_in_functions.cpp  CMakeLists.txt  Makefile  README.md
data/: book_data.txt  gettysburg_address.txt.backup  video_games.tsv
